# hypso-package

./: .buildinfo  .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  conda.md  demo.ipynb  demo_processing.ipynb  development.md  genindex.html  hypso.atmospheric.atmospheric_correction_6sv1.html  hypso.atmospheric.atmospheric_correction_acolite.html  hypso.atmospheric.base.html  hypso.atmospheric.html  hypso.calibration.correction.html  hypso.calibration.html  hypso.classification.WaterDetection.html  hypso.classification.WaterDetection.runWaterDetect.html  hypso.classification.WaterDetection.waterdetect.Common.html  hypso.classification.WaterDetection.waterdetect.External_mask.html  hypso.classification.WaterDetection.waterdetect.Glint.html  hypso.classification.WaterDetection.waterdetect.Image.html  hypso.classification.WaterDetection.waterdetect.InputOutput.html  hypso.classification.WaterDetection.waterdetect.WaterDetect.html  hypso.classification.WaterDetection.waterdetect.html  hypso.classification.WaterDetection.waterdetect.products.html  hypso.classification.html  hypso.classification.water.html  hypso.device.html  hypso.download.html  hypso.experimental.chlorophyll.chl_algorithms.html  hypso.experimental.chlorophyll.estimate_chlorophyll_ml.html  hypso.experimental.chlorophyll.html  hypso.experimental.chlorophyll.indices.html  hypso.experimental.chlorophyll.utilities_chl.html  hypso.experimental.html  hypso.georeference.coordinate_correction.html  hypso.georeference.create_adcs_files.html  hypso.georeference.georef.geometric.html  (+24 more)
.github/workflow/: documentation.yml
.github/workflows/: python-package-conda.yml  sphinx_docx_to_gh_pages.yaml
_sources/: hypso.atmospheric.atmospheric_correction_6sv1.rst.txt  hypso.atmospheric.atmospheric_correction_acolite.rst.txt  hypso.atmospheric.base.rst.txt  hypso.atmospheric.rst.txt  hypso.calibration.correction.rst.txt  hypso.calibration.rst.txt  hypso.classification.WaterDetection.rst.txt  hypso.classification.WaterDetection.runWaterDetect.rst.txt  hypso.classification.WaterDetection.waterdetect.Common.rst.txt  hypso.classification.WaterDetection.waterdetect.External_mask.rst.txt  hypso.classification.WaterDetection.waterdetect.Glint.rst.txt  hypso.classification.WaterDetection.waterdetect.Image.rst.txt  hypso.classification.WaterDetection.waterdetect.InputOutput.rst.txt  hypso.classification.WaterDetection.waterdetect.WaterDetect.rst.txt  hypso.classification.WaterDetection.waterdetect.products.rst.txt  hypso.classification.WaterDetection.waterdetect.rst.txt  hypso.classification.rst.txt  hypso.classification.water.rst.txt  hypso.device.rst.txt  hypso.download.rst.txt  hypso.experimental.chlorophyll.chl_algorithms.rst.txt  hypso.experimental.chlorophyll.estimate_chlorophyll_ml.rst.txt  hypso.experimental.chlorophyll.indices.rst.txt  hypso.experimental.chlorophyll.rst.txt  hypso.experimental.chlorophyll.utilities_chl.rst.txt  hypso.experimental.rst.txt  hypso.georeference.coordinate_correction.rst.txt  hypso.georeference.create_adcs_files.rst.txt  hypso.georeference.georef.geometric.rst.txt  hypso.georeference.georef.gmaps.rst.txt  hypso.georeference.georef.rst.txt  hypso.georeference.georef.time_process.rst.txt  hypso.georeference.georef.utils.rst.txt  hypso.georeference.georef_plots.rst.txt  hypso.georeference.interpolate_frame.rst.txt  hypso.georeference.reference.rst.txt  hypso.georeference.rst.txt  hypso.plot.map.rst.txt  hypso.plot.rst.txt  hypso.reading.load.rst.txt  (+6 more)
_sources/autoapi/: index.rst.txt
areas/: frohavet.yaml  trondheim.yaml
autoapi/: index.html
autoapi/hypso/: index.html
coefficients/: coefficients_version_log.txt  convert_csv_to_npz.py  destriping_matrix_HYPSO-1_wide_v1.csv  smile_correction_matrix_HYPSO-1_nominal_v1.csv
coefficients/hypso1/: destriping_matrix_HYPSO-1_nominal_v1.csv  radiometric_calibration_matrix_HYPSO-1_wide_v1.csv  spectral_bands_HYPSO-1_v1.csv
coefficients/hypso2/: EQM_spectral_coeffs_fluorescent_before_shock_vib.csv  FM_pre_spectral_coeffs.csv  H2_A-hat  H2_B-hat  h2_spectral_calibration_coefficients.csv  h2_spectral_calibration_wavelengths_center_row.csv
demo/: demo.ipynb  demo.py  demo_area_defintion.ipynb  demo_plotting.ipynb  demo_processing (kopi).ipynb  demo_processing.ipynb  demo_resampling.ipynb  frohavet.yaml  frohavet_demo.yaml  loading.ipynb  satpy_demo.py  satpy_testing.ipynb  testing.py
demo/old_demos/: demo_area_defintion.ipynb
docs/: conf.py  index.html  requirements.txt  requirements.yaml
docs/source/: conf.py
hypso/: DataArrayDict.py  DataArrayValidator.py  MANIFEST.in  __init__.py  dataarray_utils.py  device.py  device_old_version.py  download.py  hypso.py  hypso1.py  hypso1_scene.py  hypso2.py  pyproject.toml
hypso/atmospheric/: __init__.py  atmospheric_correction.py  atmospheric_correction_6sv1.py  atmospheric_correction_acolite.py  atmospheric_correction_machi.py  base.py  correction.py  machi.py
hypso/atmospheric_correction/: __init__.py  atmospheric_correction.py
hypso/calibration/: __init__.py  calibration_pipeline.py  correction.py  destriping.py  make_destriping_matrix.py  radiometric.py  smile.py
hypso1_calibration/: MANIFEST.in  pyproject.toml
hypso2_calibration/: MANIFEST.in  pyproject.toml
hypso2_calibration/hypso2_calibration/: main.py
hypso2_calibration/hypso2_calibration.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
hypso2_calibration/hypso2_calibration/data/: EQM_spectral_coeffs_fluorescent_before_shock_vib.npz  FM_pre_spectral_coeffs.npz  destriping_matrix_HYPSO-1_nominal_v1.npz  destriping_matrix_HYPSO-1_wide_v1.npz  h2_radiometric_calibration_matrix_wide.npz  h2_spectral_calibration_coefficients.npz  h2_spectral_calibration_wavelengths_center_row.npz  spectral_bands_HYPSO-2.npz
ignore/: chlorophyll.py
testing/: 62v1_test.py  acolite_test.py  acolite_testing.py  composite.py  hypso_package_acolite.py  hypso_package_calibration.py  rgb_img = to_image(composite).py  satpy_testing.ipynb  satpy_testing.py  sift_georeferencing_test.py  sift_georeferencing_test_2.py  sift_gr.ipynb  testing.py
(+275 files in other folders)
