# -- build

[tool.setuptools_scm]
write_to = "hypso/_version.py"
fallback_version = "1.9.1"

[build-system]
requires=[
  "python >=3.9",
  "pip",
  "setuptools>=61.0",
  "setuptools_scm[toml]>=3.4",
  ]
  
build-backend="setuptools.build_meta"

[project]
name="hypso"
authors = [
  { name="Alvaro Flores", email="alvaro.f.romero@ntnu.no" },
]
description = "HYPSO Toolbox For Satellite Image Processing"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

requires-python = ">=3.9"
dependencies=[
  "numpy>=1.24",
  "gdal ==3.6.2",
  "cartopy >=0.21.1",
  "pandas",
  "matplotlib",
  "rasterio >=1.3.4",
  "pyproj >=3.4.1",
  "netcdf4 >=1.6.3",
  "scikit-image >=0.21.0",
  "py6s >=1.9.2",
  "scipy >=1.11.2",
  "pillow",
  "shapely >=2.0.1",
  "tqdm >=4.66.1",
  "astropy >=5.3.4",
  "progressbar >=2.5",
  "requests",
  "python-dateutil",
  "scikit-learn >=1.3.2",
  "packaging",
  "sphinx",
  "sphinx_rtd_theme",
  "sphinx-autoapi",
  
]

# dynamic properties set by tools
dynamic = [
  "version",
]

[project.urls]
"Homepage" = "https://github.com/NTNU-SmallSat-Lab/hypso-package"
"Bug Tracker" = "https://github.com/NTNU-SmallSat-Lab/hypso-package/issues"

[tool.setuptools]
license-files = [ "LICENSE" ]
include-package-data=true

[tool.setuptools.packages.find]
include = [
  "hypso*",
]
