# -- build

#https://packaging.python.org/en/latest/specifications/core-metadata/

#[tool.setuptools_scm]
#write_to = "hypso/_version.py"
#fallback_version = "2.0.0"

[build-system]
requires=[
#  "python >=3.10",
  "pip>=23.2.1",
  "setuptools>=69.2.0",
#  "setuptools_scm[toml]>=8.1.0",
  ]
  
build-backend="setuptools.build_meta"

[project]
name="hypso"
version = "2.0.3"
authors = [
  { name="Cameron Penne", email="cameron.l.penne@ntnu.no" },
]
maintainers = [
  { name="Cameron Penne", email="cameron.l.penne@ntnu.no" },
]
description = "HYPSO Toolbox For Satellite Image Processing"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

requires-python = ">=3.10"
dependencies=[
  "numpy>=1.24",
  #"gdal ==3.6.2",
  "gdal >=3.4.1",
  "cartopy >=0.21.1",
  "pandas",
  "matplotlib >=3.8.3",
  "rasterio >=1.3.4",
  "pyproj >=3.4.1",
  "netcdf4 >=1.6.3",
  "scikit-image >=0.21.0",
  "py6s >=1.9.2",
  "scipy >=1.11.2",
  "pillow",
  "shapely >=2.0.1",
  "tqdm >=4.66.1",
  "astropy >=5.3.4",
  "progressbar >=2.5",
  "requests",
  "python-dateutil",
  "scikit-learn >=1.4",
  "xgboost",
  "joblib",
  "pyresample >=1.28.2",
  "satpy >=0.45.0",
  "xarray >=2023.12.0"

]

# dynamic properties set by tools
#dynamic = [
#  "version",
#]

[project.urls]
"Homepage" = "https://github.com/NTNU-SmallSat-Lab/hypso-package"
"Bug Tracker" = "https://github.com/NTNU-SmallSat-Lab/hypso-package/issues"

[tool.setuptools]
license-files = [ "LICENSE" ]
include-package-data=true

[tool.setuptools.packages.find]
include = [
  "hypso*",
]
